<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fragmentProfileRL"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/fragmentProfileIV"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/ic_person"
            android:backgroundTint="@color/colorWhite" />

        <TextView
            android:id="@+id/fragmentProfileNameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragmentProfileIV"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/fragmentProfileSurnameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/fragmentProfileIV"
            android:layout_below="@+id/fragmentProfileNameTV"
            android:text="@string/surname"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmentProfileRL"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_email"/>

            <TextView
                android:id="@+id/fragmentProfileEmailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/email"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_account"/>

            <TextView
                android:id="@+id/fragmentProfileRoleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/role"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragmentProfileIndexIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_book"/>

            <TextView
                android:id="@+id/fragmentProfileIndexTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/index"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragmentProfileGroupIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_group"/>

            <TextView
                android:id="@+id/fragmentProfileGroupTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/group"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>