<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gradeSubjectTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/subject"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/gradeGradeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="0"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_text"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/gradeTypeNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gradeSubjectTV"
        android:text="@string/type"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/gradeTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gradeGradeTV"
        android:text="type"
        android:textSize="15dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:id="@+id/gradeTeacherNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gradeTypeNameTV"
        android:text="@string/teacher"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/gradeTeacherTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gradeTypeTV"
        android:text="Name Surname"
        android:textSize="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="8dp"/>


</RelativeLayout>