<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/fragmentChatRL"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary">

        <EditText
            android:id="@+id/fragmentChatET"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/search"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:background="@drawable/rounded_edit"/>

        <Button
            android:id="@+id/fragmentChatSearchButton"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_edit"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/search"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>


    <ListView
        android:id="@+id/fragmentChatLV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragmentChatRL"
        android:layout_above="@+id/fragmentChatRL2"
        android:layout_marginBottom="5dp"/>

    <RelativeLayout
        android:id="@+id/fragmentChatRL2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary">

        <EditText
            android:id="@+id/fragmentChatEnterET"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/enterEmailOrGroup"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:background="@drawable/rounded_edit"/>

        <Button
            android:id="@+id/fragmentChatButton"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_edit"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:text="@string/add"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

</RelativeLayout>